enable_testing()
include_directories(${libzmq_SOURCE_DIR}/include)
include_directories(${libzmq_SOURCE_DIR}/src)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_executable(test_pair_inproc test_pair_inproc.cpp)
add_executable(test_pair_tcp test_pair_tcp.cpp)
add_executable(test_reqrep_inproc test_reqrep_inproc.cpp)
add_executable(test_reqrep_tcp test_reqrep_tcp.cpp)
add_executable(test_hwm test_hwm.cpp)
add_executable(test_reqrep_device test_reqrep_device.cpp)
add_executable(test_sub_forward test_sub_forward.cpp)
add_executable(test_invalid_rep test_invalid_rep.cpp)
add_executable(test_msg_flags test_msg_flags.cpp)

target_link_libraries(test_pair_inproc zmq)
target_link_libraries(test_pair_tcp zmq)
target_link_libraries(test_reqrep_inproc zmq)
target_link_libraries(test_reqrep_tcp zmq)
target_link_libraries(test_hwm zmq)
target_link_libraries(test_reqrep_device zmq)
target_link_libraries(test_sub_forward zmq)
target_link_libraries(test_invalid_rep zmq)
target_link_libraries(test_msg_flags zmq)

add_test(test_pair_inproc ${CMAKE_CURRENT_BINARY_DIR}/test_pair_inproc)
add_test(test_pair_tcp ${CMAKE_CURRENT_BINARY_DIR}/test_pair_tcp)
add_test(test_reqrep_inproc ${CMAKE_CURRENT_BINARY_DIR}/test_reqrep_inproc)
add_test(test_reqrep_tcp ${CMAKE_CURRENT_BINARY_DIR}/test_reqrep_tcp)
add_test(test_hwm ${CMAKE_CURRENT_BINARY_DIR}/test_hwm)
add_test(test_reqrep_device ${CMAKE_CURRENT_BINARY_DIR}/test_reqrep_device)
add_test(test_sub_forward ${CMAKE_CURRENT_BINARY_DIR}/test_sub_forward)
add_test(test_invalid_rep ${CMAKE_CURRENT_BINARY_DIR}/test_invalid_rep)
add_test(test_msg_flags ${CMAKE_CURRENT_BINARY_DIR}/test_msg_flags)
#if !ON_MINGW
add_executable(test_shutdown_stress test_shutdown_stress.cpp)
add_executable(test_pair_ipc test_pair_ipc.cpp)
add_executable(test_reqrep_ipc test_reqrep_ipc.cpp)
add_executable(test_timeo test_timeo.cpp)

target_link_libraries(test_shutdown_stress zmq)
target_link_libraries(test_pair_ipc zmq)
target_link_libraries(test_reqrep_ipc zmq)
target_link_libraries(test_timeo zmq)

add_test(test_shutdown_stress ${CMAKE_CURRENT_BINARY_DIR}/test_shutdown_stress)
add_test(test_pair_ipc ${CMAKE_CURRENT_BINARY_DIR}/test_pair_ipc)
add_test(test_reqrep_ipc ${CMAKE_CURRENT_BINARY_DIR}/test_reqrep_ipc)
add_test(test_timeo ${CMAKE_CURRENT_BINARY_DIR}/test_timeo)
#endif
